[lworld] TestLWorld fails with "bci must not shift" with -Xcomp

XMLWordPrintable

      # Internal Error (/oracle/valhallaL/open/src/hotspot/share/opto/graphKit.cpp:672), pid=21433, tid=21444
      # assert(kit->bci() == _bci) failed: bci must not shift
      #
      # JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-adhoc.tobias.open)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-adhoc.tobias.open, compiled mode, compressed oops, g1 gc, linux-amd64)
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /oracle/valhallaL/open/JTwork/scratch/core.21433)
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

      Current CompileTask:
      C2: 43347 1052 b compiler.valhalla.valuetypes.TestLWorld::test12_verifier (24 bytes)

      Stack: [0x00007fb944006000,0x00007fb944107000], sp=0x00007fb9440ff830, free space=998k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1a3d12c] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
      V [libjvm.so+0x1a3e0bf] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0xbdd7ba] report_vm_error(char const*, int, char const*, char const*, ...)+0x12a
      V [libjvm.so+0xee3ad7] PreserveJVMState::~PreserveJVMState()+0x67
      V [libjvm.so+0xcddced] Parse::catch_inline_exceptions(SafePointNode*)+0x99d
      V [libjvm.so+0x16a14e0] Parse::do_exceptions()+0x110
      V [libjvm.so+0x16a833f] Parse::do_one_block()+0x28f
      V [libjvm.so+0x16a8ff1] Parse::do_all_blocks()+0x1d1
      V [libjvm.so+0x16acc5b] Parse::Parse(JVMState*, ciMethod*, float)+0xe3b
      V [libjvm.so+0x901c2c] ParseGenerator::generate(JVMState*)+0x1fc
      V [libjvm.so+0x902aac] LateInlineCallGenerator::do_late_inline()+0xb4c
      V [libjvm.so+0xb2ce52] Compile::inline_incrementally_one(PhaseIterGVN&)+0x452
      V [libjvm.so+0xb31e5f] Compile::inline_incrementally(PhaseIterGVN&)+0x13f
      V [libjvm.so+0xb350d1] Compile::Optimize()+0x3f1
      V [libjvm.so+0xb37300] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1380
      V [libjvm.so+0x8ff482] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x302
      V [libjvm.so+0xb44ca0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3c0
      V [libjvm.so+0xb45989] CompileBroker::compiler_thread_loop()+0x269
      V [libjvm.so+0x195d1b7] JavaThread::thread_main_inner()+0x287
      V [libjvm.so+0x195d411] JavaThread::run()+0x191
      V [libjvm.so+0x16410ca] thread_native_entry(Thread*)+0xfa

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: