8206112: [lworld] TestLWorld fails with 'bci must not shift' with -Xcomp